# Cmake-formatter

./: .gitignore  CMakeLists.txt  LICENSE  main.cpp
src/: CMakeLists.txt
src/Component/Parser/: Parser.cpp  Parser.h
src/MainProgram/: main.cpp
